# bitcoin_explorer

./: .gitignore  docker-compose.yml
.github/workflows/: deploy.yml
bitcoin_core/: Dockerfile  bitcoin.conf.template  entrypoint.sh
ingestion/: .gitignore  Cargo.toml  Dockerfile
ingestion/src/: error.rs  main.rs  offchain.rs  onchain.rs
webapp/: Dockerfile  global.d.ts  package-lock.json  package.json  tsconfig.json
webapp/prisma/: schema.prisma
webapp/prisma/migrations/20240927032857_init/: migration.sql
webapp/prisma/migrations/20241005235432_phase_2/: migration.sql
webapp/prisma/migrations/20241006005609_add_transactions_table/: migration.sql
webapp/prisma/migrations/20241008014712_add_offchain_metrics/: migration.sql
webapp/src/app/: layout.tsx  page.tsx
webapp/src/components/: BlockList.tsx  Dashboard.tsx  LatestBlock.tsx  MarketInfo.tsx  Nav.tsx  PriceHistoryGraph.tsx
webapp/src/components/ui/: drawer.tsx
webapp/src/lib/: prisma.ts
webapp/src/pages/api/: blockHeight.ts  blocks.ts  marketInfo.ts  priceHistory.ts
