[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bitcoincore-rpc = "0.14"
tokio-postgres = "0.7"
dotenv = "0.15"
thiserror = "1.0"
chrono = "0.4" 



